Rebase closest locale into CTD & use non-deprecated Locale return (#921)
* Rebase closest locale into CTD & use non-deprecated Locale return

* Shift locate and make public method now private

---------

Co-authored-by: Yeregorix <yeregorixcraft@gmail.com>