@@ -19,22 +19,28 @@ package com.velocitypowered.proxy.util;
 
 import com.github.benmanes.caffeine.cache.Caffeine;
 import com.github.benmanes.caffeine.cache.LoadingCache;
+import java.text.MessageFormat;
 import java.util.Locale;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import net.kyori.adventure.key.Key;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.TranslatableComponent;
+import net.kyori.adventure.translation.Translator;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 /**
  * Matches a player's locale to the "closest" Velocity locale, for message localization.
  */
-public final class ClosestLocaleMatcher {
+public class ClosestLocaleTranslator implements Translator {
 
-  public static final ClosestLocaleMatcher INSTANCE = new ClosestLocaleMatcher();
-
+  private final Translator delegate;
   private final Map<String, Locale> byLanguage;
-
   private final LoadingCache<Locale, Locale> closest;
 
-  private ClosestLocaleMatcher() {
+  public ClosestLocaleTranslator(Translator delegate) {
+    this.delegate = delegate;
     this.byLanguage = new ConcurrentHashMap<>();
     this.closest = Caffeine.newBuilder().build(sublocale -> {
       String tag = sublocale.getLanguage();
@@ -48,14 +54,35 @@ public final class ClosestLocaleMatcher {
    * @param locale locale to register
    */
   public void registerKnown(Locale locale) {
-    if (locale.getLanguage().equals(new Locale("zh").getLanguage())) {
+    if (locale.getLanguage().equals(Locale.of("zh").getLanguage())) {
       return;
     }
 
     this.byLanguage.put(locale.getLanguage(), locale);
   }
 
-  public Locale lookupClosest(Locale locale) {
+  @Override
+  public @NotNull Key name() {
+    return delegate.name();
+  }
+
+  @Override
+  public boolean canTranslate(@NotNull String key, @NotNull Locale locale) {
+    return delegate.canTranslate(key, lookupClosest(locale));
+  }
+
+  @Override
+  public @Nullable MessageFormat translate(@NotNull String key, @NotNull Locale locale) {
+    return delegate.translate(key, lookupClosest(locale));
+  }
+
+  @Override
+  public @Nullable Component translate(@NotNull TranslatableComponent component,
+                                       @NotNull Locale locale) {
+    return delegate.translate(component, lookupClosest(locale));
+  }
+
+  private Locale lookupClosest(Locale locale) {
     return closest.get(locale);
   }
 }
